--- a/TramUrWay.Android/Properties/AndroidManifest.xml
+++ b/TramUrWay.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="net.thedju.TramUrWay" android:versionCode="17" android:versionName="1.1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="net.thedju.TramUrWay" android:versionCode="18" android:versionName="1.2.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<application android:label="TramUrWay" android:icon="@mipmap/ic_launcher">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBuG_9zGva_W0pKb-VxOOPOJwwlDzUjpCY" />
 	</application>
